--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      property="og:image"
+      content="https://desireejoy.github.io/SaveAFox-temp/images/SAF-FBLink.png"
+    />
+    <meta
+      property="og:title"
+      content="The Finnegan Fox Book Series from Save A Fox Rescue"
+    />
+    <meta
+      property="og:url"
+      content="https://desireejoy.github.io/SaveAFox-temp/"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="The children's book series about Finnegan Fox, a real life fox rescued from a fur farm by SaveAFox rescue. The books are about he and the other SaveAFox residents and their adventures!"
+    />
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Website for the SaveAFox rescue's Finnegan Fox book series"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <link rel="icon" href="./images/saf-favicon.ico" />
+    <link rel="apple-touch-icon" href="./logo192.png" />
+    <link
+      rel="image_src"
+      href="https://desireejoy.github.io/SaveAFox-temp/images/SAF-FBLink.png"
+    />
+    <link rel="manifest" href="./manifest.json" />
+    <title>Finnegan Fox Book Series</title>
+    <link href="./static/css/main.276610b7.css" rel="stylesheet" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Finnegan Fox Book Series</title>
   </head>
   <body>
